Add CK metrics collection